[tool.poetry]
name = "keep_transfer"
version = "0.1.0"
description = ""
authors = ["HappyCthulhu <valeriyg98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
notion = "^0.0.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
